assets/css/main.css
/* ... */
.header__notify-img {
  width: 50px;
  object-fit: contain;
}
.header__notify-info {
  margin-left: 12px;
}
.header__notify-name {
  display: block;
  color: black;
  font-weight: 400;
  font-size: 1.4rem;
}
.header__notify-desc {
  display: block;
  padding: 8px 0;
  color: rgb(131, 131, 131);
  font-size: 1.2rem;
}
.header__notify-footer {
  display: flex;
}
.header__notify-footer-btn {
  text-decoration: none;
  color: #666;
  padding: 8px 32px;
  margin: auto;
  font-size: 1.4rem;
  font-weight: 400;
  width: 100%;
  text-align: center;
}

/* auth form */

.auth-form {
  width: 500px;
}
.auth-form__container {
  padding: 0px 32px;
}
.auth-form__header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 10px 12px;
}
.auth-form__heading {
  font-size: 2.2rem;
  font-weight: 400;
  color: var(--text-color);
}
.auth-form__switch-btn {
  font-size: 1.6rem;
  color: var(--primary-color);
  font-weight: 500;
  cursor: pointer;
}
.auth-form__input {
  width: 100%;
  height: 40px;
  margin-top: 16px;
  padding: 0 12px;
  font-size: 1.4rem;
  border: 1px solid var(--border-color);
  border-radius: 3px;
  outline: none;
}

.auth-form__input:focus {
  border-color: #777;
}

.auth-form__aside {
  margin-top: 17px;
}

.auth-form__policy-text {
  font-size: 1.2rem;
  line-height: 1.7rem;
  text-align: center;
  padding: 0 12px;
}
.auth-form__policy-link {
  text-decoration: none;
  color: var(--primary-color);
}
.auth-form__control {
  display: flex;
  justify-content: flex-end;
  margin-top: 80px;
  margin-bottom: 20px;
}

.auth-form__control--back {
  margin-right: 9px;
}
.auth-form__socials {
  background-color: rgb(224, 224, 224);
  padding: 16px 36px;
  display: flex;
  justify-content: space-between;
}

.auth-form__socials--facebook {
  background-color: #3a5898;
  color: white;
}

.auth-form__socials--google {
  background-color: #fff;
  color: #999;
}

.auth-form__socials-text {
  margin: 0 31px;
}

/* modal sign-in */
.auth-form__help {
  display: flex;
  justify-content: flex-end;
}

.auth-form__help-link {
  text-decoration: none;
  font-size: 1.5rem;
  color: #939393;
}

.auth-form__help-link--forgot {
  color: var(--primary-color);
}

.auth-form__help-separate {
  display: block;
  border-left: 1px solid #eaeaea;
  height: 16px;
  margin: 0 13px;
}

/* header second */
.header-second {
  display: flex;
  height: var(--header-second);
  align-items: center;
  padding: 0 8px;
}

.header-logo {
  width: 200px;
}

.header-logo__image {
  width: 150px;
}

.header-second__search {
  display: flex;
  background-color: #fff;
  height: 40px;
  flex: 1;
  border-radius: 2px;
  align-items: center;
}

.header-second__search-input {
  height: 100%;
  border: none;
  outline: none;
  font-size: 1.4rem;
  color: #666;
  padding: 0 17px;
  border-radius: 3px;
  width: 100%;
}

.header-second__search-selection {
  border-left: 1px solid #ccc;
  padding-left: 17px;
  position: relative;
  cursor: pointer;
}

.header-second__search-label {
  font-size: 1.4rem;
  color: #666;
}

.header-second__search-selection-icon {
  margin: 0 7px;
  font-size: 17px;
  color: #666;
  position: relative;
  bottom: 1.5px;
}

/* search */
.header-second__search-icon {
  color: white;
  font-size: 1.5rem;
}
.header-second__search-btn {
  background-color: var(--primary-color);
  border: none;
  height: 85%;
  border-radius: 2px;
  margin-right: 3px;
  width: 7%;
  cursor: pointer;
}

.header-second__search-btn:hover {
  opacity: 0.9;
}

.header-second__search-selection:hover .header-second__search-option {
  display: block;
}

.header-second__search-selection::after {
  content: "";
  display: block;
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  height: 15px;
}

.header-second__search-option {
  position: absolute;
  right: 0;
  top: calc(100% + 3px);
  min-width: 130px;
  list-style: none;
  box-shadow: 0 1px 2px rgb(224, 224, 224);
  padding-left: 0;
  border-radius: 3px;
  overflow: hidden;
  display: none;
  animation: fadeIn ease-in 0.1s;
  z-index: 1;
}

.header-second__search-item {
  background-color: #fff;
  padding: 8px 8px;
}

.header-second__search-item:hover {
  background-color: #fafafa;
  cursor: pointer;
}

.header-second__search-item span {
  font-size: 1.4rem;
  color: #666;
  margin-left: 7px;
}

.header-second__search-item i {
  font-size: 1.3rem;
  color: var(--primary-color);
  padding: 0 7px;
  display: none;
}

.header-second__search-item--active i {
  display: inline-block;
}

.header-second__search-wrap {
  flex: 1;
  height: 100%;
  position: relative;
}

.header-second__search-input:focus ~ .header-second__search-history {
  display: block;
}

.header-second__search-history {
  position: absolute;
  top: calc(100% + 3px);
  left: 0;
  width: calc(100% - 13px);
  background-color: white;
  border-radius: 2px;
  box-shadow: 0 0 3px #939393;
  overflow: hidden;
  display: none;
  z-index: 1;
}

.header-second__search-history-title {
  font-size: 1.5rem;
  font-weight: 400;
  margin: 9px 15px;
  color: rgb(212, 212, 212);
}
.header-second__search-history-list {
  padding: 0px;
  margin-bottom: 0;
  list-style: none;
}
.header-second__search-history-item {
  padding: 0px 15px;
}

.header-second__search-history-item:hover {
  background-color: #fafafa;
}
.header-second__search-history-item a {
  display: block;
  text-decoration: none;
  color: rgb(54, 54, 54);
  font-size: 1.3rem;
  font-weight: 400;
  line-height: 35px;
}

/* cart list */
.header-second__cart {
  width: 150px;
  display: flex;
  justify-content: center;
  position: relative;
}

.header-second__cart-wrap {
  padding: 0 7px;
  cursor: pointer;
}
.header-second__cart-wrap:hover .header-second__cart-box {
  display: block;
}

.header-second__cart-icon {
  font-size: 23px;
  color: white;
}
/* ... */

